<resources>
    <string-array name="languages">
        <item>English</item>
        <item>Русский</item>
        <item>Español</item>
        <item>Français</item>
        <item>Deutsch</item>
        <item>中文</item>
        <item>日本語</item>
    </string-array>

    <string-array name="languages_codes">
        <item>en</item>
        <item>ru</item>
        <item>es</item>
        <item>fr</item>
        <item>de</item>
        <item>zh</item>
        <item>ja</item>
    </string-array>

    <string-array name="themes">
        <item>White theme</item>
        <item>Blue theme</item>
        <item>Red theme</item>
        <item>Dark theme</item>
    </string-array>

    <string-array name="filter_rules">
        <item>Newest</item>
        <item>Oldest</item>
        <item>By title (A-Z)</item>
        <item>By title (Z-A)</item>
        <item>By author (A-Z)</item>
        <item>By author (Z-A)</item>
        <item>By duration (↑)</item>
        <item>By duration (↓)</item>
    </string-array>

    <string name="now_playing_string">Now Playing:</string>
    <string name="language_string">Language</string>
    <string name="playlists_string">All playlists</string>
    <string name="recommendations_string">Recommendations</string>
    <string name="settings_string">Settings</string>
    <string name="tools_string">Tools</string>
    <string name="account_string">Account</string>
    <string name="change_speed">Change speed</string>
    <string name="enter_speed">Enter speed</string>
    <string name="select_audio_file">Select audio file</string>
    <string name="selected_file">Select file: %s</string>
    <string name="NowPlaying_S">Now Playing:</string>
    <string name="Language_S">Language</string>
    <string name="Playlists_S">All playlists</string>
    <string name="Recommendations_S">Recommendations</string>
    <string name="Settings_S">Settings</string>
    <string name="Tools_S">Tools</string>
    <string name="Account_S">Account</string>
    <string name="app_name">AKAP</string>
    <string name="test_text">Test</string>
    <string name="now_playing">Now Playing: None</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="global_volume">Global Volume</string>
    <string name="local_volume">Local Volume</string>
    <string name="skip_intro">Skip Intro</string>
    <string name="skip_outro">Skip Outro</string>
    <string name="hide_settings">Hide settings</string>
    <string name="show_settings">Show settings</string>
    <string name="hello_blank_fragment" translatable="false">test</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="remove_song">Remove Song</string>
    <string name="add_song">Add Song</string>
    <string name="current_playlist_string">Playlist</string>
    <string name="song_title">Song Title</string>
    <string name="artist">Artist</string>
    <string name="currentSongTime">0 / 0</string>
    <string name="all_songs">All songs</string>
    <string name="song_S">Songs</string>
    <string name="playlist_name" translatable="false" />
    <string name="shuffleSongButton">Shuffle playlist</string>
    <string name="repeat">Repeat song</string>
    <string name="No_Playlist">No playlist</string>
    <string name="permission_denied">Permission denied</string>
    <string name="search_hint">Search for a song or author…</string>
    <string name="found_by">Found by:</string>
    <string name="no_songs">No songs</string>
    <string name="set_intro_skip">Set intro time</string>
    <string name="set_outro_skip">Set outro time</string>
    <string name="too_early_outro">The time of the outro should be after the intro</string>
    <string name="too_late_intro">The time of the intro should be before the outro</string>
    <string name="no_song_playing">No song playing</string>
    <string name="intro_set_successfully">Intro set successfully</string>
    <string name="outro_set_successfully">Outro set successfully</string>
    <string name="current_language_text">Current language</string>
    <string name="delete_metadata">Delete metadata</string>
    <string name="edit_playlist_name">New name</string>
    <string name="save">Save</string>
    <string name="playlist_name_empty">Wrong playlist name</string>
    <string name="cancel">Cancel</string>
    <string name="song_string">Songs</string>
    <string name="try_to_delete_playlist">Can\'t delete playlist</string>
    <string name="no_playlist">No playlist</string>
    <string name="no_playlists">No playlists</string>
    <string name="delete_current_playlist">Can\'t delete current playlist</string>
    <string name="new_playlist">New playlist</string>
    <string name="save_current_playlist">Save playlist</string>
    <string name="theme_string">Theme</string>
    <string name="now_playing_title">Title</string>
    <string name="now_playing_artist">Artist</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="shuffle_song_button">Shuffle</string>
    <string name="edit_outro_time">Set the outro time</string>
    <string name="edit_intro_time">Set the intro time</string>
    <string name="add_song_button">Add songs</string>
    <string name="apply_button_text">Apply</string>
    <string name="add_songs_button_text">Add songs</string>
    <string name="delete_songs_button_text">Delete songs</string>
    <string name="try_to_add_song">already in a playlist</string>
    <string name="changeNameSongSetting">Change name</string>
    <string name="changeAuthorSongSetting">Change author</string>
    <string name="discardMetaDataSongSetting">Discard metadata</string>
    <string name="info_title">Information</string>
    <string name="close">Close</string>
    <string name="outro_info">Set the time of the music song\'s auto end optional end point. The set time must not be earlier than the time of the music song\'s optional start point.</string>
    <string name="intro_info">Set the time of the music song\'s optional start point from which it will be played back. The set time must not be later than the song\'s auto end time.</string>
    <string name="builder_name_text">Enter a name</string>
    <string name="wrong_name">You entered the wrong name</string>
    <string name="auto_outro_skip">Automatic song outro skip</string>
    <string name="enable_outro_skip">Enable outro skip</string>
    <string name="auto_outro_info">Trigger threshold:</string>
    <string name="no_playlists_to_delete">No playlists selected for deletion</string>
    <string name="filter_rule">Choose sort rule</string>
    <string name="searchAuthorSongSetting">Search songs by author</string>
    <string name="jump_to_start">Go to the beginning of the song</string>
    <string name="enable_jump_to_start">Enable song rollback</string>
    <string name="jump_to_start_description">after the specified percentage when trying to play the previous song</string>
    <string name="jump_to_start_info">Trigger threshold:</string>
</resources>