<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/songNameSettingCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Song Name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/songAuthorSettingCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Artist Name"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/songNameSettingCard" />

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/songAuthorSettingCard"
        app:layout_constraintVertical_bias="0.25">

        <Button
            android:id="@+id/changeNameSettingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/changeNameSongSetting" />

        <Button
            android:id="@+id/changeAuthorSettingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/changeAuthorSongSetting" />

        <Button
            android:id="@+id/searchAuthorSettingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/searchAuthorSongSetting" />

        <Button
            android:id="@+id/discardMetaDataSettingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/discardMetaDataSongSetting" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>